tests/positive/basic/exit_basic/input.ci
void main() {
    print("before\n");
    exit(0);
    print("never\n");
}
