tests/negative/syntax/missing_rbrace/input.ci
void main() {
    print("x\n");
